--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="langues">
                 <h2>Langues</h2>
                 <div class="langue">
-                    <span>Anglais (B1)</span> <!--span comme div mais moins influant au css-->
+                    <span>Anglais (B1)</span>
                     <div class="progress">
                         <div class="progress-bar" style="width: 70%;"></div>
                     </div>
@@ -61,7 +61,7 @@
                 <div class="langue">
                     <span>Espagnol (A2)</span>
                     <div class="progress">
-                        <div class="progress-bar" style="width: 50%;"></div> <!--permet -->
+                        <div class="progress-bar" style="width: 50%;"></div>
                     </div>
                 </div>
             </div>
@@ -168,11 +168,11 @@
                 <ul>
                     <li>
                         <strong>Classe préparatoire aux grandes écoles</strong> - Maths, Physique, Science de l'Ingénieur, Section Numérique
-                        <br><span class="details">Institution des Chartreux, 2022-2023</span>
+                        <br><span class="details">Nom de l'établissement, Années de formation</span>
                     </li>
                     <li>
                         <strong>Baccalauréat Général</strong> - Maths, Physique-Chimie, Mention Bien (option Maths Expertes)
-                        <br><span class="details">Groupe scolaire Al-Kindi, 2021-2022</span>
+                        <br><span class="details">Nom du lycée, Année d'obtention</span>
                     </li>
                 </ul>
             </article>
